# demo-python-package

./: .gitignore  LICENSE  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: ci.yml
src/demo_python_package/: __main__.py  cli.py  greetings.py
tests/: test_cli.py
